assets/css/style.css
/* ... */
.navbar-custom a.page-scroll:active {
    opacity: 0.9;
}

.navbar-custom a.navbar-brand {
    color: white;
}

div.navbar-lang {
    display: inline-block;
    padding-top: 13px;
    color: black;
}

div.navbar-lang p {
    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 13px;
    line-height: 1.0;
    padding-top: 0;
    margin: 0;
    text-align: center;
}

div.navbar-lang p a {
    color: rgba(0, 0, 0, .5);
    -moz-transition: all 0.5s;
    -webkit-transition: all 0.5s;
    -o-transition: all 0.5s;
    transition: all 0.5s;
}

div.navbar-lang p a:hover {
    color: rgba(0, 0, 0, .7);
    text-decoration: none;
}

nav#mainNav.navbar-custom.fixed-top {
    background: rgba(255, 255, 255, 1);
    background: -moz-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 1) 100%);
    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255, 255, 255, 1)), color-stop(100%, rgba(246, 246, 246, 1)));
    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 1) 100%);
    background: -o-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 1) 100%);
    background: -ms-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 1) 100%);
    background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f6f6f6', GradientType=0);

    -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);

    transition: box-shadow 50ms linear, background 200ms linear;
}

nav#mainNav.navbar-custom.fixed-top.transparent {
    background: transparent;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;

    transition: box-shadow 50ms linear, background 200ms linear;
}

nav#mainNav.navbar-custom.fixed-top.menu-open {
    /*background: rgb(145, 0, 49);*/
    transition: background linear 200ms;
}

nav#mainNav a:hover svg {
    fill: rgba(0, 0, 0, .7);
}

nav#mainNav.navbar-custom .navbar-toggler:hover,
nav#mainNav.navbar-custom .navbar-toggler,
nav#mainNav.navbar-custom .navbar-toggler:focus {
    background-color: transparent;
    border-color: transparent;
}

/*nav#mainNav.navbar-custom.menu-open .navbar-toggler {
    border-color: #9a2d48;
    transition: border-color linear 300ms;
}*/

nav#mainNav .navbar-lang {
    text-transform: uppercase;
}

nav#mainNav.navbar-custom.navbar-dark .navbar-nav li.nav-item a.nav-link {
    color: rgba(255, 255, 255, .9);
}

nav#mainNav .nav-important {
    background-color: #e3162e;
    border-radius: 5px;
}

nav#mainNav .nav-important a.nav-link {
    color: white;
}

section p {
    text-align: center;
}

ul.navbar-nav {
    position: relative;
}

@media screen and (max-width: 990px) {
    .nav-important {
        width: 150px;
        text-align: center;
        position: absolute;
        bottom: 0px;
        right: 0;
    }
}

@media screen and (max-width: 500px) {
    .nav-important {
        bottom: 5px;
    }
}

section#header {
    height: 41.09vw;
    position: relative;
    overflow: hidden;
    background: transparent url(../imgs/banner1.png) no-repeat top center;
    -webkit-background-size: contain;
    background-size: contain;
}

body.donation_controller.index_action section#header{
    background-image: url(../imgs/banner2.png);
}
body.donation_controller.confirmation_action section#header{
    background-image: url(../imgs/banner3.png);
}

section#header .container{
    position: absolute;
    height: 15vw;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
}

section#header .section-title,
section#header .section-content {
    text-align: center;
    margin: 0 auto;
}

section#header .section-title{
    font-size: 8vw;
}

section#header .section-content{
    font-size: 3.5vw;
}

section#header .section-title, section#header .section-content {
    color: #FFFFFF;
    font-weight: lighter;
}
section#header .section-title #countdown span{
    font-weight: bold;
}

/** Pages styles */
body.site_controller section#how_to_help{
    text-align: center;
    padding-top: 50px;
}

body.site_controller section#how_to_help .section-title{
    font-size: 32px;
}
body.site_controller section#how_to_help .section-content{
    color: #000000;
    font-size: 1.5em;
    width: 70%;
    margin: auto;
    text-align: justify;
}
@media screen and (max-width: 768px) {
    body.site_controller section#how_to_help .section-content {
        width: 90%;
    }
}

body.site_controller section#sequence{
    margin: 50px auto;
    padding: 2.5vw 0;
    height: 20.5vw;
    text-align: center;
    background-color: #DC72B2;
}

body.site_controller section#sequence svg{
    height: 100%;
}

body.site_controller #rewards h1{
    text-align: center;
    margin-bottom: 50px;
}

@media screen and (max-width: 992px) {
    body.site_controller #rewards .reward {
        margin-bottom: 65px;
    }
}

body.site_controller #rewards .reward .reward-box{
    margin-bottom: 20px;
    text-align: center;
    border-radius: 10px;
    box-shadow: 1px 1px 5px #000000;
    background-color: #E2E2E2;
}
body.site_controller #rewards .reward .reward-box img{
    width: 90%;
    margin-bottom: 20px;
}
body.site_controller #rewards .reward .reward-box .reward-contribution{
    background-color: #FFFFFF;
    border-top: 1px inset #000000;
}
body.site_controller #rewards .reward .reward-box .reward-contribution .contribution-label{
    display: inline-block;
    position: relative;
    top: -15px;
    width: 75%;
    background-color: #FFFFFF;
    border-radius: 10px;
    font-size: 1.2em;
    text-transform: uppercase;
    border-top: 1px inset #000000;
}
body.site_controller #rewards .reward .reward-box .reward-contribution .reward-amount{
    font-size: 2em;
    font-weight: bold;
}
/* ... */

